--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ members = [
   "lightyear_inputs_native",
   "lightyear_interpolation",
   "lightyear_link",
+  "lightyear_metrics",
   "lightyear_transport",
   "lightyear_connection",
   "lightyear_messages",
@@ -87,6 +88,7 @@ lightyear_inputs_leafwing = { path = "./lightyear_inputs_leafwing", version = "0
 lightyear_inputs_native = { path = "./lightyear_inputs_native", version = "0.25.5", default-features = false }
 lightyear_interpolation = { path = "./lightyear_interpolation", version = "0.25.5", default-features = false }
 lightyear_messages = { path = "./lightyear_messages", version = "0.25.5", default-features = false }
+lightyear_metrics = { path = "./lightyear_metrics", version = "0.25.5", default-features = false }
 lightyear = { path = "lightyear", version = "0.25.5", default-features = false }
 lightyear_transport = { path = "lightyear_transport", version = "0.25.5", default-features = false }
 lightyear_prediction = { path = "./lightyear_prediction", version = "0.25.5", default-features = false }
