--- a/examples/common/Cargo.toml
+++ b/examples/common/Cargo.toml
@@ -18,7 +18,7 @@ server = ["lightyear/server"]
 netcode = ["lightyear/netcode"]
 udp = ["lightyear/udp"]
 steam = ["lightyear/steam"]
-debug = ["gui", "lightyear/metrics"]
+debug = ["gui", "lightyear/debug"]
 
 # this serves as a bit of "workspace-hack" crate by enabling all bevy features needed by examples.
 # you can read about workspace-hack crates here: https://docs.rs/cargo-hakari/latest/cargo_hakari/about/index.html
