feat: add benchmark for allocations

--- a/benches/criterion/Cargo.toml
+++ b/benches/criterion/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["game-development", "network-programming"]
 license.workspace = true
 
 [dependencies]
-lightyear = { workspace = true, features = ["interpolation", "metrics"] }
+lightyear = { workspace = true, features = ["interpolation", "metrics", "std"] }
 lightyear_tests = { workspace = true }
 
 # enable all the bevy defaults:
