--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,5 +6,10 @@ clip = "clippy --workspace --features=lightyear_core/not_mock --exclude=compilet
 
 # used for debugging/profiling
 [profile.debug]
-rustflags = ["-C", "force-frame-pointers=yes", "-C", "symbol-mangling-version=v0"]
+rustflags = [
+  "-C",
+  "force-frame-pointers=yes",
+  "-C",
+  "symbol-mangling-version=v0",
+]
 debug = "line-tables-only"
