--- a/lightyear_tests/Cargo.toml
+++ b/lightyear_tests/Cargo.toml
@@ -28,9 +28,7 @@ test_utils = [
   "lightyear_crossbeam/test_utils",
   "lightyear_aeronet/test_utils",
 ]
-steam = [
-  "lightyear/steam"
-]
+steam = ["lightyear/steam"]
 
 
 [dependencies]
