--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,12 +4,16 @@
 t = "test -- --test-threads=1"
 clip = "clippy --workspace --features=lightyear_core/not_mock --exclude=compiletime --exclude=avian_3d_character --exclude=launcher --exclude=delta_compression --exclude=distributed_authority --no-deps -- -D warnings -A clippy::needless_lifetimes"
 
-# used for debugging/profiling
-[profile.debug]
-rustflags = [
-  "-C",
-  "force-frame-pointers=yes",
-  "-C",
-  "symbol-mangling-version=v0",
-]
-debug = "line-tables-only"
+[unstable]
+profile-rustflags = true
+
+[profile.profiling]
+inherits = "release"
+# only works in nightly
+#rustflags = [
+#  "-C",
+#  "force-frame-pointers=yes",
+#  "-C",
+#  "symbol-mangling-version=v0",
+#]
+debug = true
