--- a/lightyear_replication/Cargo.toml
+++ b/lightyear_replication/Cargo.toml
@@ -36,6 +36,7 @@ lightyear_sync.workspace = true
 dashmap.workspace = true
 indexmap.workspace = true
 metrics = { workspace = true, optional = true }
+smallbitvec.workspace = true
 smallvec.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
