--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ members = [
   "lightyear_prediction",
   "lightyear_raw_connection",
   "lightyear_replication",
+  "lightyear_replicon",
   "lightyear_serde",
   "lightyear_steam",
   "lightyear_sync",
@@ -95,6 +96,7 @@ lightyear_prediction = { path = "./lightyear_prediction", version = "0.25.5", de
 lightyear_link = { path = "./lightyear_link", version = "0.25.5", default-features = false }
 lightyear_raw_connection = { path = "./lightyear_raw_connection", version = "0.25.5", default-features = false }
 lightyear_replication = { path = "./lightyear_replication", version = "0.25.5", default-features = false }
+lightyear_replicon = { path = "./lightyear_replicon", version = "0.25.5", default-features = false }
 lightyear_serde = { path = "./lightyear_serde", version = "0.25.5", default-features = false }
 lightyear_steam = { path = "./lightyear_steam", version = "0.25.5", default-features = false }
 lightyear_sync = { path = "./lightyear_sync", version = "0.25.5", default-features = false }
@@ -213,6 +215,9 @@ bevy_utils = { version = "0.17", default-features = false, features = [
   "debug",
 ] }
 tracy-client = { version = "=0.18.0" }
+
+# replication
+bevy_replicon = { version = "0.37.1" }
 
 # input
 bevy_enhanced_input = { version = "0.20", features = ["serialize"] }
