--- a/lightyear_replicon/Cargo.toml
+++ b/lightyear_replicon/Cargo.toml
@@ -27,7 +27,7 @@ lightyear_utils.workspace = true
 lightyear_core.workspace = true
 lightyear_connection.workspace = true
 lightyear_link.workspace = true
-lightyear_replication.workspace = true
+lightyear_messages.workspace = true
 lightyear_transport.workspace = true
 lightyear_serde.workspace = true
 
@@ -39,9 +39,9 @@ tracing.workspace = true
 # bevy
 bevy_app.workspace = true
 bevy_ecs = { workspace = true, features = ["bevy_reflect"] }
+bevy_derive.workspace = true
 bevy_reflect.workspace = true
 bevy_time.workspace = true
-bevy_utils.workspace = true
 
 
 # replication
