--- a/examples/replicon/Cargo.toml
+++ b/examples/replicon/Cargo.toml
@@ -23,6 +23,7 @@ steam = ["lightyear_examples_common/steam"]
 
 [dependencies]
 lightyear = { "workspace" = true, features = [
+  "std",
   "interpolation",
   "prediction",
   "replication",
