--- a/lightyear_prediction/Cargo.toml
+++ b/lightyear_prediction/Cargo.toml
@@ -20,9 +20,10 @@ lightyear_utils.workspace = true
 lightyear_core = { workspace = true }
 lightyear_connection = { workspace = true }
 lightyear_replication = { workspace = true, features = [
+  "delta",
   "prediction",
-  "interpolation",
-] }
+  "interpolation"
+]}
 lightyear_sync.workspace = true
 lightyear_messages = { workspace = true, optional = true }
 lightyear_frame_interpolation.workspace = true
