--- a/lightyear_inputs_bei/Cargo.toml
+++ b/lightyear_inputs_bei/Cargo.toml
@@ -38,6 +38,8 @@ bevy_ecs.workspace = true
 bevy_reflect.workspace = true
 bevy_utils.workspace = true
 
+bevy_replicon.workspace = true
+
 [dev-dependencies]
 bevy.workspace = true
 test-log.workspace = true
