--- a/lightyear_avian2d/Cargo.toml
+++ b/lightyear_avian2d/Cargo.toml
@@ -20,7 +20,7 @@ bench = false
 
 [features]
 default = ["std", "2d"]
-2d = ["avian2d/2d", "avian2d/parry-f32"]
+2d = ["avian2d/2d"]
 std = ["lightyear_prediction/std"]
 deterministic = ["dep:seahash"]
 lag_compensation = []
