--- a/examples/auth/Cargo.toml
+++ b/examples/auth/Cargo.toml
@@ -25,7 +25,7 @@ lightyear = { "workspace" = true, features = [
 lightyear_examples_common = { "workspace" = true, features = [
   "client",
   "server",
-  "gui",
+  "gui2d",
   "netcode",
   "udp",
 ] }
