--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightyear"
-version = "0.25.5"
+version = "0.26.0-rc1"
 authors.workspace = true
 rust-version.workspace = true
 edition.workspace = true
