--- a/lightyear_avian2d/Cargo.toml
+++ b/lightyear_avian2d/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightyear_avian2d"
-version = "0.26.0-rc1"
+version = "0.26.0-rc2"
 authors.workspace = true
 rust-version.workspace = true
 edition.workspace = true
@@ -19,7 +19,7 @@ required-features = ["2d"]
 bench = false
 
 [features]
-default = ["std", "2d"]
+default = ["std", "2d", "avian2d/f32"]
 2d = ["avian2d/2d"]
 std = ["lightyear_prediction/std"]
 deterministic = ["dep:seahash"]
