--- a/lightyear_avian2d/Cargo.toml
+++ b/lightyear_avian2d/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightyear_avian2d"
-version = "0.25.5"
+version = "0.26.0"
 authors.workspace = true
 rust-version.workspace = true
 edition.workspace = true
@@ -14,12 +14,12 @@ publish = true
 
 [lib]
 name = "lightyear_avian2d"
-path = "../lightyear_avian/src/lib.rs"
+#path = "../lightyear_avian/src/lib.rs"
 required-features = ["2d"]
 bench = false
 
 [features]
-default = ["std", "2d"]
+default = ["std", "2d", "avian2d/f32"]
 2d = ["avian2d/2d"]
 std = ["lightyear_prediction/std"]
 deterministic = ["dep:seahash"]
