--- a/lightyear_avian3d/Cargo.toml
+++ b/lightyear_avian3d/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightyear_avian3d"
-version = "0.25.5"
+version = "0.26.0"
 authors.workspace = true
 rust-version.workspace = true
 edition.workspace = true
@@ -14,12 +14,12 @@ publish = true
 
 [lib]
 name = "lightyear_avian3d"
-path = "../lightyear_avian/src/lib.rs"
+#path = "../lightyear_avian/src/lib.rs"
 required-features = ["3d"]
 bench = false
 
 [features]
-default = ["std", "3d"]
+default = ["std", "3d", "avian3d/f32"]
 3d = ["avian3d/3d"]
 std = ["lightyear_prediction/std"]
 deterministic = ["dep:seahash"]
