chore: update deps

--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -224,7 +224,7 @@ lightyear_udp = { workspace = true, optional = true }
 
 [target."cfg(target_family = \"wasm\")".dependencies]
 console_error_panic_hook.workspace = true
-bevy_web_keepalive.workspace = true
+lightyear_web.workspace = true
 
 [package.metadata.docs.rs]
 all-features = true
