ci: pipeline jobs test and format fail

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -219,7 +219,7 @@ tracy-client = { version = "0.18" }
 
 # input
 bevy_enhanced_input = { version = "0.22", features = ["serialize"] }
-leafwing-input-manager = { version = "0.20", default-features = false }
+leafwing-input-manager = { version = "0.20", default-features = false, features = [ "keyboard" ] }
 
 # physics
 avian2d = { version = "0.5", default-features = false }
