--- a/lightyear_avian2d/Cargo.toml
+++ b/lightyear_avian2d/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lightyear_avian2d"
-version = "0.26.1"
+version = "0.26.4"
 authors.workspace = true
 rust-version.workspace = true
 edition.workspace = true
@@ -20,6 +20,7 @@ bench = false
 
 [features]
 default = ["std", "2d", "avian2d/parry-f32"]
+f32 = ["avian2d/f32"]
 2d = ["avian2d/2d"]
 std = ["lightyear_prediction/std"]
 deterministic = ["dep:seahash"]
