fix: update bevy features for examples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -196,6 +196,7 @@ bevy = { version = "0.18", default-features = false, features = [
   "multi_threaded",
   "sysinfo_plugin",
   "zstd_rust",
+  "keyboard"
 ] }
 bevy_app = { version = "0.18", default-features = false }
 bevy_derive = { version = "0.18", default-features = false }
@@ -218,7 +219,7 @@ bevy_winit = { version = "0.18", default-features = false }
 tracy-client = { version = "0.18" }
 
 # input
-bevy_enhanced_input = { version = "0.22", features = ["serialize"] }
+bevy_enhanced_input = { version = "0.23", features = ["serialize"] }
 leafwing-input-manager = { version = "0.20", default-features = false, features = [
   "keyboard",
 ] }
